package dev.ifrs.pessoas;

public class Admin extends Pessoa {

    public Admin(String username, String email, String password) {
        super(username, email, password);
        //TODO Auto-generated constructor stub
    }
    
}
